version/0.19/_sources/api/solver/_autosummary/settings/inertial_resistance.rst.txt
:orphan:

.. _inertial_resistance:

inertial_resistance
===================

.. autoclass:: ansys.fluent.core.solver.settings_241.inertial_resistance.inertial_resistance
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

========================================   =======================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

================================   =======================

Parent                                             Summary

================================   =======================
:ref:`porous_zone <porous_zone>`       Help not available.

================================   =======================

