version/0.28/_sources/api/solver/_autosummary/settings/inertial_resistance.rst.txt
:orphan:

.. _inertial_resistance:

inertial_resistance
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.inertial_resistance
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`inertial_resistance_child <inertial_resistance_child>`


.. rubric:: Included in:

================================   =============================================================

Parent                                                                                   Summary

================================   =============================================================
:ref:`porous_zone <porous_zone>`       Allows to change porous-zone model variables or settings.

================================   =============================================================

